# HK_AE_Forecast

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: pages.yml  supabase-health.yml
docs/: conditional-wait-model.md  data-source-assessment.md  field-observations.md  longitudinal-study.md  operations.md  supabase-deployment.md
src/aed_pred/: __init__.py  archive.py  cli.py  context.py  model.py
supabase/: .env.example  config.toml
supabase/functions/_shared/: core.ts
supabase/functions/health-check/: deno.json  index.ts
supabase/functions/wait-session-delete/: index.ts
supabase/functions/wait-session-event/: index.ts
supabase/functions/wait-session-get/: index.ts
supabase/functions/wait-session-queue/: index.ts
supabase/functions/wait-session-recover/: index.ts
supabase/functions/wait-session-start/: index.ts
supabase/migrations/: 202607150001_wait_research.sql  20260719164835_health_and_model_readiness.sql  20260720102953_queue_observations.sql
tests/: test_model.py
web/: analytics.js  app.js  index.html  journey-core.js  research-core.js  research-ui.js  styles.css
web/data/: context.json  model.json
web/tests-js/: analytics.test.js  journey-core.test.js  research-core.test.js  security-contract.test.js
