[project]
name = "aed-pred"
version = "0.1.0"
description = "Interpretable Hong Kong A&E waiting-time forecasts for GitHub Pages"
requires-python = ">=3.11"

[project.scripts]
aed-pred = "aed_pred.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aed_pred"]

